--- a/research.Rmd
+++ b/research.Rmd
@@ -11,56 +11,26 @@ output:
 
 
 
-Selected Papers
-----------------------
-
-*********
-
-**Woodill, A. J.**, Hemachandra, D., Nakamoto, S. T., & Leung, P. (2014). The Economics of Coffee Production in Hawai'i, (June),1-9.
-[[**url**]](http://www.ctahr.hawaii.edu/oc/freepubs/pdf/EI-25.pdf)
-
-Richardson, G. M., Bowers, J., **Woodill, A. J.**, Barr, J. R., Gawron, J. M., & Levine, R. a. (2014). Topic Models: A Tutorial with R. International Journal of Semantic Computing, 08(01), 85-98. [[**url**]](http://www.worldscientific.com/doi/abs/10.1142/S1793351X14500044?journalCode=ijsc)
-
-<br>
-<br>
-
-
 Working Papers
 ----------------------
 
 *********
 
-####**Nonlinear Temperature Effects and Short-Run Adaptation of the Dust Bowl Region during the 1930s**####
+####**Do Energy Efficiency Standards Hurt Consumers? Evidence from Household Appliance Sales (with Michael Roberts)**####
 
-The Dust Bowl of the 1930s was one of the most significant environmental events in American history.
-Understanding the short-run adjustments from major weather events on agricultural yield can shed light on
-the economic impacts of changing weather conditions. Nonlinear temperature effects are examined in the
-Great Plains region of the US from 1910 - 1960 to identify changes in corn yield and short-run adaptation.
-Results show the Dust Bowl region had more harmful temperatures than the Northern Great Plains, but
-the temperature effect on corn yields were similar in each region; however, total corn yields from 1910-1960
-were less in the Dust Bowl region. Nonlinear estimation results show slight adaptation in the Dust Bowl
-region and no adaptation in the Northern region. Adaptation appears to be limited in the short-run even
-with the introduction of hybrid corn and changing farming practices. Precipitation also appears to play less
-of a role on crop yields. These results add a historical perspective to the issue of short-run adaptation due
-to extreme weather events.
+ Since 1987, the Department of Energy has set minimum energy efficiency standards for household appliances.  Although the review process considers engineering-based accounting of costs and benefits associated with standards, economists have questioned whether these policies hurt consumers by increasing prices and limiting the scope and nature of product attributes, thereby reducing consumers' perceptions of product quality. To evaluate whether standard changes affect prices and quality, we develop a constant-quality price index using same-model price changes of appliances sold in the United States between 2001 and 2011, a period over which energy-efficiency standards changed three times for clothes washers and Energy Star thresholds were updated for refrigerators. We use this index to disentangle price changes from perceived quality changes, and develop a welfare index that accounts for both prices and quality changes over time.  We then examine how price, quality and welfare changed as energy-efficiency standards became progressively more stringent. We find no indication that more stringent standards increased prices or reduced product quality. Instead, we find prices declined while quality and consumer welfare increased, especially around times when more stringent energy efficiency standards were enforced. Similar price and quality patterns emerge for refrigerators which had only Energy Star policy changes. We conclude that standards have had at worst a negligible effect on consumer welfare, or at best lowered prices and improved quality for both washers and refrigerators, and perhaps other appliances. Further analysis suggests that standards induce innovation, but have little or no influence on inter-manufacturer competition. 
 
-* [Replication Content](https://github.com/johnwoodill/Non-Linear-Temperature-Effects-of-the-Dust-Bowl)
+Current Projects
+----------------------
 
-####**Optimal spraying and harvesting strategies to combat CBB in Hawaii: A dynamic approach**
+*********
 
-The arrival of the coffee berry borer (CBB) to Hawaii in 2010 has had a major impact on Hawaii coffee production. Many farms have shut down, processors are rejecting cherry with high levels of infestation, and farmers have had to adopt new farming practices, such as pesticide spraying, to reduce the damage done by this invasive species. To understand the optimal spraying and harvest strategies for a farm with CBB we first estimate the economic damages by modeling CBB infestation levels using a time-inhomogenous Markov chain. When a farmer decides to spray they reduce their infestation level, thus reducing economic damage but at a cost. We then develop a forward-recursion dynamic programming model to maximize the net benefit of a farmer to define the optimal spraying pattern and harvest strategy for a season. We plan to use our model to test strategies for different farm sizes based on integrated management practices, the impact of CBB infestation level changes from weather, and policy decisions, such as the impact of state-level subsidies.
+* Pollution Havens or Halos? Evidence from Foreign Acquisitions in Indonesia (with Beata Javorcik and Inessa Love)
 
-* [Replication Content](https://github.com/johnwoodill/cbb-dynamic-model)
+* Can Cheap Oil Hurt Net Importers? Evidence from the Philippines (with Michael Abrigo)
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+* Beggar-Thy-Neighbor's Beach: Hedonic Pricing of Adaptation to Sea-Level Rise (with John Lynham)
 
-  ga('create', 'UA-61017136-2', 'auto');
-  ga('send', 'pageview');
+* The Cost of Aligning Utilities Incentives to State's Agenda: Revenue Decoupling in the US (with Nori Tarui)
 
-</script>
-
-
+* Not All States Are Alike: The Effect of Oil Price Shocks on State-Level Economies in the US (with Michael Roberts)
