--- a/cv.Rmd
+++ b/cv.Rmd
@@ -9,11 +9,11 @@ output:
 
 <br>
 
-[Download (PDF) ](images/AJohnWoodill_CV.pdf)
+[Download (PDF) ](images/CV_ArlanBrucal.pdf)
 
-![](images/AJohnWoodill_CV-page-001.jpg)
+![](images/ArlanBrucal_CV-page-001.jpg)
 
-![](images/AJohnWoodill_CV-page-002.jpg)
+![](images/ArlanBrucal_CV-page-002.jpg)
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
