--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -11,26 +11,7 @@ output:
 
 
 
-Working Papers
+Teaching
 ----------------------
 
 *********
-
-####**Do Energy Efficiency Standards Hurt Consumers? Evidence from Household Appliance Sales (with Michael Roberts)**####
-
- Since 1987, the Department of Energy has set minimum energy efficiency standards for household appliances.  Although the review process considers engineering-based accounting of costs and benefits associated with standards, economists have questioned whether these policies hurt consumers by increasing prices and limiting the scope and nature of product attributes, thereby reducing consumers' perceptions of product quality. To evaluate whether standard changes affect prices and quality, we develop a constant-quality price index using same-model price changes of appliances sold in the United States between 2001 and 2011, a period over which energy-efficiency standards changed three times for clothes washers and Energy Star thresholds were updated for refrigerators. We use this index to disentangle price changes from perceived quality changes, and develop a welfare index that accounts for both prices and quality changes over time.  We then examine how price, quality and welfare changed as energy-efficiency standards became progressively more stringent. We find no indication that more stringent standards increased prices or reduced product quality. Instead, we find prices declined while quality and consumer welfare increased, especially around times when more stringent energy efficiency standards were enforced. Similar price and quality patterns emerge for refrigerators which had only Energy Star policy changes. We conclude that standards have had at worst a negligible effect on consumer welfare, or at best lowered prices and improved quality for both washers and refrigerators, and perhaps other appliances. Further analysis suggests that standards induce innovation, but have little or no influence on inter-manufacturer competition. 
-
-Current Projects
-----------------------
-
-*********
-
-* Pollution Havens or Halos? Evidence from Foreign Acquisitions in Indonesia (with Beata Javorcik and Inessa Love)
-
-* Can Cheap Oil Hurt Net Importers? Evidence from the Philippines (with Michael Abrigo)
-
-* Beggar-Thy-Neighbor's Beach: Hedonic Pricing of Adaptation to Sea-Level Rise (with John Lynham)
-
-* The Cost of Aligning Utilities Incentives to State's Agenda: Revenue Decoupling in the US (with Nori Tarui)
-
-* Not All States Are Alike: The Effect of Oil Price Shocks on State-Level Economies in the US (with Michael Roberts)
