--- a/index.Rmd
+++ b/index.Rmd
@@ -32,3 +32,5 @@ Current: 742 Lukepane Avenue Honolulu, HI 96816 USA
 
 Previous: Block 14 Lot 36 Westbay Homes Daan-Bukid, Bacoor, Cavite Philippines 4102
 
+I am in London
+
