--- a/index.Rmd
+++ b/index.Rmd
@@ -11,26 +11,21 @@ output:
 <br>
 <center>
 <div style="width:300px; height=200px">
-![](images/abrucal.jpg) 
+![](images/abrucal.jpg)
 </div>
 </center>
 <br>
 
-I am a Postdoctoral Research Fellow at the University of Hawaii Economic Research Organization (UHERO). My areas of specialization include Environmental Economics, International Trade and Energy Economics.
+I am a Postdoctoral Research Fellow at the London School of Economics - Grantham Research Institute for Climate Change and the Environment. My areas of specialization include Environmental Economics, International Trade and Energy Economics.
 
 Feel free to contact me through email.
 
 **Arlan Brucal**
 
-al[at]hawaii.edu
+A.Z.Brucal[at]lse.ac.uk
 
 azibrucal[at]gmail.com
 
 **Address**
 
-Current: 742 Lukepane Avenue Honolulu, HI 96816 USA
-
-Previous: Block 14 Lot 36 Westbay Homes Daan-Bukid, Bacoor, Cavite Philippines 4102
-
-I am in London
-
+The London School of Economics and Political Science (LSE), Houghton Street, London WC2A 2AE UK
