--- a/index.Rmd
+++ b/index.Rmd
@@ -16,16 +16,13 @@ output:
 </center>
 <br>
 
-I am a Postdoctoral Research Fellow at the London School of Economics - Grantham Research Institute for Climate Change and the Environment. My areas of specialization include Environmental Economics, International Trade and Energy Economics.
+I am a Postdoctoral Research Fellow at the London School of Economics and Political Science - Grantham Research Institute for Climate Change and the Environment. My areas of specialization include Environmental Economics, International Trade and Energy Economics.
 
-Feel free to contact me through email.
+Feel free to contact me. 
 
-**Arlan Brucal**
-
-A.Z.Brucal[at]lse.ac.uk
-
-azibrucal[at]gmail.com
-
-**Address**
-
-The London School of Economics and Political Science (LSE), Houghton Street, London WC2A 2AE UK
+**Contact Details**
+The London School of Economics and Political Science
+Houghton Street, London 
+WC2A 2AE UK
+Ph: +44 (0)20 7107 5027 or +44 (0)20 7107 5440
+Email: A.Z.Brucal[at]lse.ac.uk
