--- a/index.Rmd
+++ b/index.Rmd
@@ -21,8 +21,9 @@ I am a Postdoctoral Research Fellow at the London School of Economics and Politi
 Feel free to contact me. 
 
 **Contact Details**
+<br>
 The London School of Economics and Political Science <br>
-Houghton Street, London 
-WC2A 2AE UK
-Ph: +44 (0)20 7107 5027 or +44 (0)20 7107 5440
+Houghton Street, London <br>
+WC2A 2AE UK <br>
+Ph: +44 (0)20 7107 5027 or +44 (0)20 7107 5440 <br>
 Email: A.Z.Brucal[at]lse.ac.uk
