--- a/cv.Rmd
+++ b/cv.Rmd
@@ -9,11 +9,10 @@ output:
 
 <br>
 
-[Download (PDF) ](images/CV_ArlanBrucal_2016-01-22.pdf)
+[Download (PDF) ](images/CV_ArlanBrucal.pdf)
 
 ![](images/CV_ArlanBrucal_2016-01-22-page-001.jpg)
 ![](images/CV_ArlanBrucal_2016-01-22-page-002.jpg)
-![](images/CV_ArlanBrucal_2016-01-22-page-003.jpg)
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
