--- a/cv.Rmd
+++ b/cv.Rmd
@@ -9,13 +9,11 @@ output:
 
 <br>
 
-[Download (PDF) ](images/CV_ArlanBrucal_2016-01-22.pdf)
+[Download (PDF) ](images/CV_ArlanBrucal.pdf)
 
-![](images/CV_ArlanBrucal_2016-01-22-page-001.jpg)
+![](images/ArlanBrucal_CV-page-001.jpg)
 
-![](images/CV_ArlanBrucal_2016-01-22-page-002.jpg)
-
-![](images/CV_ArlanBrucal_2016-01-22-page-003.jpg)
+![](images/ArlanBrucal_CV-page-002.jpg)
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
