--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ output:
 </center>
 <br>
 
-I am a Postdoctoral Research Fellow at the London School of Economics and Political Science - Grantham Research Institute for Climate Change and the Environment. My areas of specialization include Environmental Economics, International Trade and Energy Economics.
+I am a Postdoctoral Research Fellow at the London School of Economics and Political Science - Grantham Research Institute for Climate Change and the Environment. My areas of specialization is Applied Econometrics with emphasis on Environmental Economics, International Trade and Energy Economics.
 
 Feel free to contact me. 
 
