--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -14,8 +14,17 @@ output:
 Teaching
 ----------------------
 
-####**Summer 2015 **####
+####** University of Hawai`i, USA **####
 
-Economics 321 - Introduction to Statistics
+Instructor, Economics 321 - Introduction to Statistics, Summer 2015
+Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015
+Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012
 
+####** De La Salle University, Philippines **####
+
+Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009
+
+####** University of the Philippines **####
+
+Teaching Fellow, various undergraduate economics courses, 2005-2007
 
