--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -14,13 +14,13 @@ output:
 Teaching
 ----------------------
 
-####** University of Hawai`i - USA**####
+####** University of Hawai`i, USA**####
 
 Instructor, Economics 321 - Introduction to Statistics, Summer 2015
 Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015
 Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012
 
-####** De La Salle University - Philippines**####
+####** De La Salle University, Philippines**####
 
 Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009
 
