--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -14,13 +14,13 @@ output:
 Teaching
 ----------------------
 
-####**University of Hawai`i, USA**#### <br>
+####**University of Hawai`i, USA**####
 
 Instructor, Economics 321 - Introduction to Statistics, Summer 2015  <br>
 Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015  <br>
 Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012  <br>
 
-####**De La Salle University, Philippines**####  <br>
+####**De La Salle University, Philippines**####
 
 Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009  <br>
 
