--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -14,17 +14,17 @@ output:
 Teaching
 ----------------------
 
-####**University of Hawai`i, USA**####
+**University of Hawai`i, USA**
 
 Instructor, Economics 321 - Introduction to Statistics, Summer 2015  <br>
 Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015  <br>
 Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012  <br>
 
-####**De La Salle University, Philippines**####
+**De La Salle University, Philippines**
 
 Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009  <br>
 
-####**University of the Philippines**####
+**University of the Philippines**
 
 Teaching Fellow, various undergraduate economics courses, 2005-2007   <br>  
 
